[tool.poetry]
name = "ab-clone-backend"
version = "0.1.0"
description = ""
authors = ["Mapin <wnsrl4067@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ab_clone_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
black = "^22.10.0"
pillow = "^9.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
